# metapp

./: .clang-format  .gitignore  CMakeLists.txt  LLVM_SETUP.md  README.md
examples/printable/: complex.hpp  def.inja  main.cpp  meson.build
metareflect/: metareflect.cxx  metareflect.hxx  metareflect_detail.hxx  metareflect_fundamental.hxx  metareflect_templates.hxx
test/: mystruct.generated.hxx  mystruct.hpp
test/templates/: def.inja
tooling/: CMakeLists.txt  annotations.hpp  classfinder.hpp  command_line.hpp  fieldgenerator.hpp  functiongenerator.hpp  generator.hpp  generator_store.hpp  init_generators.cpp  init_generators.hpp  reflect.cpp  reflectedclass.cpp  reflectedclass.hpp  runtime_reflection_generator.cpp  runtime_reflection_generator.hpp  template_generator.cpp  template_generator.hpp  utils.cpp  utils.hpp
